# toolkit-policy-test-bench

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  QUICKSTART.md  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: CODEBASE_MAP.md
docs/audits/: POLICY_TEST_BENCH_AUDIT_REPORT_2026-03-09.md  POLICY_TEST_BENCH_FULL_AUDIT_2026-04-04.md
src/toolkit_policy_test/: config.py  monitoring.py
src/toolkit_policy_test_bench/: __init__.py  __main__.py  cli.py  compare.py  detectors.py  formatting.py  io.py  json_schema.py  pack.py  plugins.py  report.py  runner.py  signing.py  suite.py
src/toolkit_policy_test_bench/control_plane/: __init__.py  config.py  contracts.py  tool_specs.py
tests/: test_cli.py  test_control_plane.py  test_detectors_and_schema.py  test_enhancements.py  test_hardening.py  test_pack_load_twice.py  test_pack_run_compare.py
