[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "toolkit-policy-test-bench"
version = "0.1.0"
description = "Policy Test Bench: PII/secret leakage and policy regression tests for LLM outputs."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Toolkit Contributors" }]
keywords = ["llm", "security", "pii", "redteam", "policy", "compliance"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed",
]
dependencies = [
  "asyncpg>=0.29.0",
]

[project.urls]
Homepage = "https://github.com/AKIVA-AI/toolkit-policy-test-bench"
Repository = "https://github.com/AKIVA-AI/toolkit-policy-test-bench"
Issues = "https://github.com/AKIVA-AI/toolkit-policy-test-bench/issues"

[project.scripts]
toolkit-policy = "toolkit_policy_test_bench.cli:main"

[project.optional-dependencies]
signing = [
  "cryptography>=43.0.0",
]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.0",
  "pyright>=1.1.380",
  "cryptography>=43.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["toolkit_policy_test_bench"]
omit = ["*/toolkit_policy_test_bench/__main__.py"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 60

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["toolkit_policy_test_bench"]

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
toolkit_policy_test_bench = ["py.typed"]
